unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/OrderApi__Is_Required_Package_Item__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Required_Package_Item__c</fullName>
    <description>** System Calculated ** Checked when the sales order line is linked to a package item where &quot;Is Required&quot; is also checked.</description>
    <formula>OrderApi__Package_Item__r.OrderApi__Is_Required__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>** System Calculated ** Checked when the sales order line is linked to a package item where &quot;Is Required&quot; is also checked.</inlineHelpText>
    <label>Is Required Package Item</label>
    <type>Checkbox</type>
</CustomField>