unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/OrderApi__Is_Shipping_Rate__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Shipping_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines the Sales Order Line that is being used for shipping.</description>
    <inlineHelpText>Select the checkbox to have this Sales Order Line represent shipping.</inlineHelpText>
    <label>Is Shipping Rate</label>
    <type>Checkbox</type>
</CustomField>