unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/OrderApi__Is_Subscription__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Subscription__c</fullName>
    <defaultValue>false</defaultValue>
    <description>** System Calculated ** Checked when the Sales Order Line is linked to a &quot;Subscription&quot; Item.</description>
    <inlineHelpText>** System Calculated ** Checked when the Sales Order Line is linked to a &quot;Subscription&quot; Item.</inlineHelpText>
    <label>Is Subscription</label>
    <type>Checkbox</type>
</CustomField>