unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/OrderApi__Is_Valid__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Valid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When an Item that requires certain options or assignments is linked to the line, the line is considered &quot;Invalid&quot; until all requirements are met. Defaults checked for Items with no requirements, otherwise defaults unchecked.</description>
    <inlineHelpText>When an Item that requires certain options or assignments is linked to the line, the line is considered &quot;Invalid&quot; until all requirements are met. Defaults checked for Items with no requirements, otherwise defaults unchecked.</inlineHelpText>
    <label>Is Valid</label>
    <type>Checkbox</type>
</CustomField>