unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/OrderApi__Item_Class__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Item_Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** System Calculated / Override ** Link to the related Item Class.</description>
    <inlineHelpText>** System Calculated / Override ** Link to the related Item Class.</inlineHelpText>
    <label>Item Class</label>
    <referenceTo>OrderApi__Item_Class__c</referenceTo>
    <relationshipLabel>Sales Order Lines</relationshipLabel>
    <relationshipName>Sales_Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>