unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/OrderApi__Item_Tax_Percent__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Item_Tax_Percent__c</fullName>
    <description>Item Tax Percent</description>
    <formula>OrderApi__Item__r.OrderApi__Tax_Percent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Item Tax Percent</inlineHelpText>
    <label>SYSTEM</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>