unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/OrderApi__List_Price__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__List_Price__c</fullName>
    <description>**System Calculated** The standard price for the item selected on the sales order line.</description>
    <formula>OrderApi__Item__r.OrderApi__Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>**System Calculated** The standard price for the item selected on the sales order line.</inlineHelpText>
    <label>List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>