unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/OrderApi__Package_Item__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Package_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** System Calculated / Conditionally Required ** Creates a relationship to the Package Item when the Sales Order Line is created as a result of purchasing the parent package item.</description>
    <inlineHelpText>** System Calculated / Conditionally Required ** Creates a relationship to the Package Item when the Sales Order Line is created as a result of purchasing the parent package item.</inlineHelpText>
    <label>Package Item</label>
    <referenceTo>OrderApi__Package_Item__c</referenceTo>
    <relationshipLabel>Sales Order Lines</relationshipLabel>
    <relationshipName>Sales_Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>