unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/OrderApi__Parent_Is_Installment_Calculated__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Parent_Is_Installment_Calculated__c</fullName>
    <description>Parent Is Installment Calculated</description>
    <formula>OrderApi__Sales_Order_Line__r.OrderApi__Is_Installment_Calculated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Parent Is Installment Calculated</inlineHelpText>
    <label>SYSTEM</label>
    <type>Checkbox</type>
</CustomField>