unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/OrderApi__Parent_Total__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Parent_Total__c</fullName>
    <description>Parent Total</description>
    <formula>OrderApi__Sales_Order_Line__r.OrderApi__Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Parent Total</inlineHelpText>
    <label>SYSTEM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>