unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/OrderApi__Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Payment_Method__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** Conditionally Required ** Required if a Subscription Item and Subscription Plan configuration has &quot;Require Valid Payment Method&quot; checked. The Payment Method must also be related to the purchasing/subscribing Account or Contact.</description>
    <inlineHelpText>** Conditionally Required ** Required if a Subscription Item and Subscription Plan configuration has &quot;Require Valid Payment Method&quot; checked. The Payment Method must also be related to the purchasing/subscribing Account or Contact.</inlineHelpText>
    <label>Payment Method</label>
    <referenceTo>OrderApi__Payment_Method__c</referenceTo>
    <relationshipName>Sales_Order_Details</relationshipName>
    <type>Lookup</type>
</CustomField>