unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/OrderApi__Posted_Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Posted_Date__c</fullName>
    <description>Default is blank, populates with the current date value when a sales order line is flagged as &quot;Is Posted&quot;.</description>
    <inlineHelpText>Default is blank, populates with the current date value when a sales order line is flagged as &quot;Is Posted&quot;.</inlineHelpText>
    <label>Posted Date</label>
    <type>Date</type>
</CustomField>