unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/OrderApi__Price_Override__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Price_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Overrides the calculation of price based on the most appropriate price for the purchasing customer. Default is unchecked.</description>
    <inlineHelpText>Overrides the calculation of price based on the most appropriate price for the purchasing customer. Default is unchecked.</inlineHelpText>
    <label>Price Override</label>
    <type>Checkbox</type>
</CustomField>