unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/OrderApi__Quantity__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Quantity__c</fullName>
    <defaultValue>1</defaultValue>
    <description>**Conditionally Required** The quantity (number of units) of the item related to the sales order line. Required when an Item is linked that does not have &quot;Disable Price Rules&quot; checked. Default 1.</description>
    <inlineHelpText>**Conditionally Required** The quantity (number of units) of the item related to the sales order line. Required when an Item is linked that does not have &quot;Disable Price Rules&quot; checked. Default 1.</inlineHelpText>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>