unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/OrderApi__Required_Package_Items__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Required_Package_Items__c</fullName>
    <description>This field aggregates the total number of required package items needed to fulfill a sales order with this item.</description>
    <formula>OrderApi__Item__r.OrderApi__Required_Package_Items__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field aggregates the total number of required package items needed to fulfill a sales order with this item.</inlineHelpText>
    <label>Required Package Items</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>