unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/OrderApi__Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Sales_Order__c</fullName>
    <description>**Required** All Sales Order Lines require a linked Sales Order.</description>
    <inlineHelpText>**Required** All Sales Order Lines require a linked Sales Order.</inlineHelpText>
    <label>Sales Order</label>
    <referenceTo>OrderApi__Sales_Order__c</referenceTo>
    <relationshipName>Sales_Order_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>