unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/OrderApi__Sales_Order_Line_R__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Sales_Order_Line_R__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relates the functional Sales Order Line object to the reporting Sales Order Line when Fonteva&#39;s multi-currency is enabled.</description>
    <inlineHelpText>Relates the functional Sales Order Line object to the reporting Sales Order Line when Fonteva&#39;s multi-currency is enabled.</inlineHelpText>
    <label>Sales Order Line (R)</label>
    <referenceTo>OrderApi__Sales_Order_Line_R__c</referenceTo>
    <relationshipLabel>Sales Order Lines</relationshipLabel>
    <relationshipName>Sales_Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>