unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/OrderApi__Shipping_Method__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Shipping_Method__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to select a Shipping Method associated with the Sales Order Line.</description>
    <inlineHelpText>Select the Shipping Method associated with this Sales Order Line.</inlineHelpText>
    <label>Shipping Method</label>
    <referenceTo>OrderApi__Shipping_Method__c</referenceTo>
    <relationshipLabel>Sales Order Lines</relationshipLabel>
    <relationshipName>Sales_Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>