unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/OrderApi__Shipping_State__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Shipping_State__c</fullName>
    <description>Optional shipping state for the item&#39;s ordered on the order line. If left blank, the value of this field will be updated with the value of the parent order&#39;s &quot;Shipping State&quot; field.</description>
    <inlineHelpText>Optional shipping state for the item&#39;s ordered on the order line. If left blank, the value of this field will be updated with the value of the parent order&#39;s &quot;Shipping State&quot; field.</inlineHelpText>
    <label>Shipping State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>