unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/OrderApi__Shipping_Street__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Shipping_Street__c</fullName>
    <description>Optional shipping street for the item&#39;s ordered on the order line. If left blank, the value of this field will be updated with the value of the parent order&#39;s &quot;Shipping Street&quot; field.</description>
    <inlineHelpText>Optional shipping street for the item&#39;s ordered on the order line. If left blank, the value of this field will be updated with the value of the parent order&#39;s &quot;Shipping Street&quot; field.</inlineHelpText>
    <label>Shipping Street</label>
    <type>TextArea</type>
</CustomField>