unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/OrderApi__Shipping_Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Shipping_Tracking_Number__c</fullName>
    <description>Field for admins to input a Shipping Tracking Number.</description>
    <inlineHelpText>Enter the Tracking Number of the shipment that includes this item.</inlineHelpText>
    <label>Shipping Tracking Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>