unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/OrderApi__Subscription_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Subscription_Start_Date__c</fullName>
    <description>The date in this field defines the subscription&#39;s start date.</description>
    <inlineHelpText>The date in this field defines the subscription&#39;s start date.</inlineHelpText>
    <label>Subscription Start Date</label>
    <type>Date</type>
</CustomField>