unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/OrderApi__Subtotal__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Subtotal__c</fullName>
    <description>**System Calculated** Sale Price * Quantity</description>
    <formula>IF(NOT(ISBLANK(OrderApi__Sale_Price__c)) &amp;&amp; NOT(ISBLANK(OrderApi__Quantity__c)), OrderApi__Sale_Price__c * OrderApi__Quantity__c, OrderApi__Total__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>**System Calculated** Sale Price * Quantity</inlineHelpText>
    <label>Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>