unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/OrderApi__System_Override__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__System_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>**SYSTEM** Overrides the calculation of price and Price rule. Default is unchecked.</description>
    <inlineHelpText>**SYSTEM** Overrides the calculation of price and Price rule. Default is unchecked.</inlineHelpText>
    <label>SYSTEM</label>
    <type>Checkbox</type>
</CustomField>