unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/OrderApi__Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Tax_Amount__c</fullName>
    <description>This field shows the total amount of tax that is applied for the item.</description>
    <inlineHelpText>This field shows the total amount of tax that is applied for the item.</inlineHelpText>
    <label>Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>