unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/OrderApi__Tax_Percent__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Tax_Percent__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>Combined with the Parent Sale Order Line&#39;s Sales Price, this field is used to calculate the tax amount for the related item.</description>
    <inlineHelpText>Combined with the Parent Sale Order Line&#39;s Sales Price, this field is used to calculate the tax amount for the related item.</inlineHelpText>
    <label>Tax Percent</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>