unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/OrderApi__Term__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Term__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associated Term of the Sales Order Line.</description>
    <inlineHelpText>Associated Term of the Sales Order Line.</inlineHelpText>
    <label>RESERVED</label>
    <referenceTo>OrderApi__Renewal__c</referenceTo>
    <relationshipLabel>Sales Order Lines</relationshipLabel>
    <relationshipName>Sales_Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>