unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/OrderApi__Total_Installment_Price__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Total_Installment_Price__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>**System Calculated** Total amount of all the installments created as a result of this sales order line.</description>
    <inlineHelpText>**System Calculated** Total amount of all the installments created as a result of this sales order line.</inlineHelpText>
    <label>SYSTEM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>