unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/OrderApi__Total_with_Tax__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Total_with_Tax__c</fullName>
    <description>The total amount of the line with tax included.</description>
    <inlineHelpText>The total amount of the line with tax included.</inlineHelpText>
    <label>Total with Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>