unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/PO_ID__c.field-meta.xml
<CustomField>
    <fullName>PO_ID__c</fullName>
    <formula>Sponsoring_Relationship__r.PO_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO ID</label>
    <type>Text</type>
</CustomField>