unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/Primary_R_T__c.field-meta.xml
<CustomField>
    <fullName>Primary_R_T__c</fullName>
    <formula>OrderApi__Account__r.Primary_R_T_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary R/T</label>
    <type>Text</type>
</CustomField>