unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/Program_Term_Is_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Program_Term_Is_Maintenance__c</fullName>
    <description>Prints the value of the linked program term &quot;Is Maintenance&quot; field. Used by the Customer360 lightning component as well as for revenue reporting and dashboards.</description>
    <formula>ProgramApi__Program_Term__r.ProgramApi__Is_Maintenance__c</formula>
    <inlineHelpText>Prints the value of the linked program term &quot;Is Maintenance&quot; field. Used by the Customer360 lightning component as well as for revenue reporting and dashboards.</inlineHelpText>
    <label>Program Term Is Maintenance</label>
    <type>Checkbox</type>
</CustomField>