unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/ProgramApi__Program_Profile__c.field-meta.xml
<CustomField>
    <fullName>ProgramApi__Program_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relates the Sales Order and Sales Order Line to the created program profile.</description>
    <inlineHelpText>Relates the Sales Order and Sales Order Line to the created program profile.</inlineHelpText>
    <label>Program Profile</label>
    <referenceTo>ProgramApi__Program_Profile__c</referenceTo>
    <relationshipLabel>Sales Order Lines</relationshipLabel>
    <relationshipName>Sales_Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>