unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/Quarter__c.field-meta.xml
<CustomField>
    <fullName>Quarter__c</fullName>
    <formula>IF(AND((OrderApi__Activation_Date__c &gt;= DATE( 2020, 08, 01)),(OrderApi__Activation_Date__c &lt;= DATE( 2020, 10, 31))) ,&#39;Q1&#39; , &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quarter</label>
    <type>Text</type>
</CustomField>