unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/Registrant__c.field-meta.xml
<CustomField>
    <fullName>Registrant__c</fullName>
    <formula>EventApi__Attendee__r.EventApi__Full_Name__c</formula>
    <label>Registrant</label>
    <type>Text</type>
</CustomField>