unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/Revenue_Category__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Category__c</fullName>
    <description>Used by Customer360 component as well as other reports and dashboards to group revenue by &quot;Event&quot;, &quot;Subscription&quot;, or &quot;Other&quot;</description>
    <inlineHelpText>Used by Customer360 component as well as other reports and dashboards to group revenue by &quot;Event&quot;, &quot;Subscription&quot;, or &quot;Other&quot;</inlineHelpText>
    <label>Revenue Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Membership</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Shipping, Tax &amp; Delivery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>